# mahjong-calculation

./: .gitignore
general_four/: agari4.c  list4.c
general_three/: agari3.c  list3.c
rust_four/: Cargo.toml
rust_four/src/: agari.rs  diff.rs  ex_agari.rs  ex_hand.rs  ex_handchecker.rs  ex_list.rs  ex_set.rs  hand.rs  handchecker.rs  list.rs  set.rs  tile.rs
rust_three/: Cargo.toml
rust_three/src/: agari.rs  diff.rs  ex_agari.rs  ex_hand.rs  ex_handchecker.rs  ex_list.rs  ex_set.rs  hand.rs  handchecker.rs  list.rs  set.rs  tile.rs
