[package]
name = "rust_four"
version = "0.1.0"
authors = ["Typas Liao <typascake@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[[bin]]
name = "list"
path = "src/list.rs"

[[bin]]
name = "agari"
path = "src/agari.rs"

[[bin]]
name = "ex-list"
path = "src/ex_list.rs"

[[bin]]
name = "ex-agari"
path = "src/ex_agari.rs"

[dependencies]
bitvec = "1"
arrayvec = "0.7"
itertools = "0.10"
